<resources>
    <string name="app_name">Личный дневник</string>
    <string name="main_title">Личный дневник</string>
    <string name="click_me">Click me!</string>
    <string name="note_title">Note Title</string>
    <string name="note_date">note date</string>
    <string name="menu_item_add">Добавить запись</string>
    <string name="manu_item_delete">Удалить записи</string>
    <string name="noteitem_date">date</string>
    <string name="noteitem_category">category</string>
    <string name="noteitem_title">Title</string>
    <string name="action_delete_notes">Удалить записи</string>
    <string name="action_sort_by_created">Сортировать по дате создания</string>
    <string name="action_sort_by_tags">Сортировать по тегам</string>
    <string name="sort_menu">Сртировка</string>
    <string name="action_search">Поиск</string>
    <string name="note_tags">Нет тегов</string>
</resources>